# agent-book

./: README.md  pyproject.toml
chapter4/: 4_streamlit_app.py  x_agent_core.py
chapter5/: next.config.ts  package-lock.json  package.json
chapter5/app/api/workflow/execute/: route.ts
chapter5/src/mastra/workflows/: handson.ts
chapter7/: 1_langfuse_trial.py  2_langfuse_decorator.py  3_langgraph_trace.py  4_create_prompt_template.py  5_convert_to_prompt.py  6_execute_agent.py  main.py  pyproject.toml  reply.md
report/: langchain_latest_version.html
