[project]
name = "agent-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0.5",
    "langchain-aws>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-tavily>=0.2.13",
    "langfuse>=3.9.1",
    "langgraph>=1.0.2",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
    "tavily-python>=0.7.12",
]
