[project]
name = "chapter7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0.3",
    "langchain-aws>=1.0.0",
    "langchain-tavily>=0.2.12",
    "langfuse>=3.8.1",
    "langgraph>=1.0.2",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.12",
]
